RESOLVED FIXED164645
[CSS Parser] Fix basic shape parsing
https://bugs.webkit.org/show_bug.cgi?id=164645
Summary [CSS Parser] Fix basic shape parsing
Dave Hyatt
Reported 2016-11-11 11:08:24 PST
[CSS Parser] Fix basic shape parsing
Attachments
Patch (1.12 KB, patch)
2016-11-11 11:09 PST, Dave Hyatt
dino: review+
Dave Hyatt
Comment 1 2016-11-11 11:09:03 PST
Dave Hyatt
Comment 2 2016-11-11 11:12:22 PST
Landed in r208599.
Note You need to log in before you can comment on or make changes to this bug.