[CSS Parser] Fix basic shape parsing https://bugs.webkit.org/show_bug.cgi?id=164645

Reviewed by Dean Jackson.

* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeBasicShape):



Canonical link: https://commits.webkit.org/182322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208599 268f45cc-cd09-0410-ab3c-d52691b4dbfc